kubernetes/results_provider_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: results-provider
spec:
  ports:
  - port: 4000
    targetPort: 4000
    name: web
  selector:
    app: results-provider
  type: NodePort
